variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:4: error: '(' expected but identifier found.
  if estSurOrange(){
     ^RunHalf:7: error: '(' expected but identifier found.
  if estSurBiscuit(){
     ^RunHalf:10: error: illegal start of simple expression
} 
^