variables.RunHalf.scala.code
var b=0
var o=0
while(2*b!=o+1){
  if estSurOrange(){
    o=o+1
  }
  if estSurBiscuit(){
    b=b+1
  }
}